--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^16.0.0",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
@@ -18,8 +19,20 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
-    "@ng-icons/core": "^25.1.0",
-    "@ng-icons/material-icons": "^25.1.0",
+    "@taiga-ui/addon-charts": "^3.40.0",
+    "@taiga-ui/addon-commerce": "^3.40.0",
+    "@taiga-ui/addon-doc": "^3.40.0",
+    "@taiga-ui/addon-mobile": "^3.40.0",
+    "@taiga-ui/addon-preview": "^3.40.0",
+    "@taiga-ui/addon-table": "^3.40.0",
+    "@taiga-ui/addon-tablebars": "^3.40.0",
+    "@taiga-ui/cdk": "^3.40.0",
+    "@taiga-ui/core": "^3.40.0",
+    "@taiga-ui/icons": "^3.40.0",
+    "@taiga-ui/kit": "^3.40.0",
+    "@taiga-ui/layout": "^3.40.0",
+    "@tinkoff/ng-dompurify": "3.0.0",
+    "dompurify": "2.2.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -30,8 +43,8 @@
     "@angular/cli": "~16.1.6",
     "@angular/compiler-cli": "^16.1.0",
     "@ngtools/webpack": "^16.1.6",
+    "@types/dompurify": "2.2.3",
     "@types/jasmine": "~4.3.0",
-    "autoprefixer": "^10.4.14",
     "compression-webpack-plugin": "^10.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
@@ -39,8 +52,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
     "typescript": "~5.1.3",
     "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.9.0",
