--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "dompurify": "2.2.9",
+    "ngx-quill": "^22.0.0",
+    "quill": "^1.3.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -33,6 +35,7 @@
     "@ngtools/webpack": "^16.1.6",
     "@types/dompurify": "2.2.3",
     "@types/jasmine": "~4.3.0",
+    "@types/quill": "^1.3.10",
     "compression-webpack-plugin": "^10.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
