--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@types/quill": "^1.3.10",
+    "@vercel/analytics": "^1.1.1",
     "dompurify": "2.2.9",
     "ngx-quill": "^22.1.0",
     "rxjs": "~7.8.0",
