--- a/frontend/.github/workflows/main.yml
+++ b/frontend/.github/workflows/main.yml
@@ -1,75 +1,49 @@
-# name: KAITEKI | Frontend CI/CD
+name: KAITEKI | Frontend CI/CD
 
-# on:
-#   push:
-#     branches:
-#       - development
+on:
+  push:
+    branches:
+      - development
 
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v3
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-#       - name: Setup Node.js
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: "16"
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16"
 
-#       - name: Install dependencies
-#         run: |
-#           npm install
+      - name: Install dependencies
+        run: |
+          npm install
 
-#       - name: Build project
-#         run: |
-#           npm run build --prod
+      - name: Build project
+        run: |
+          npm run build --prod
 
-#   test:
-#     runs-on: ubuntu-latest
+  test:
+    runs-on: ubuntu-latest
 
-#     needs: build
+    needs: build
 
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v3
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-#       - name: Setup Node.js
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: "16"
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16"
 
-#       - name: Install dependencies
-#         run: |
-#           npm install
+      - name: Install dependencies
+        run: |
+          npm install
 
-#       - name: Run unit tests
-#         run: |
-#           npm run test
-
-#   deploy:
-#     runs-on: ubuntu-latest
-
-#     needs: test
-
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v3
-
-#       - name: Setup Node.js
-#         uses: actions/setup-node@v3
-#         with:
-#           node-version: "16"
-
-#       - name: Install dependencies
-#         run: |
-#           npm install
-
-#       - name: Deploy to Vercel
-#         uses: vercel/vercel-action@v3
-#         with:
-#           vercel-token: ${{ secrets.VERCEL_TOKEN }}
-#           project: ${{ secrets.VERCEL_PROJECT_ID }}
-#           working-directory: ./dist
-#           prod-deployment: true
+      - name: Run unit tests
+        run: |
+          npm run test
