--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
       - name: Setup Node.js
@@ -17,15 +17,15 @@ jobs:
         with:
           node-version: "16"
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           cd frontend
           npm install
 
-      - name: Build project
+      - name: Build Project
         run: |
           cd frontend
-          npm run build --prod
+          npm run build:prod
 
   test:
     runs-on: ubuntu-latest
@@ -33,7 +33,7 @@ jobs:
     needs: build
 
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
       - name: Setup Node.js
@@ -41,12 +41,12 @@ jobs:
         with:
           node-version: "16"
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           cd frontend
-          npm install
+          npm ci
 
-      - name: Run unit tests
+      - name: Run Tests
         run: |
           cd frontend
-          npm run test
+          npm run test:prod
