--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build Project
         run: |
           cd frontend
-          npm run build:prod
+          npm run build --prod
 
   test:
     runs-on: ubuntu-latest
