Apply pipline for merge

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,7 +1,9 @@
 name: KAITEKI | Frontend CI/CD
 
 on:
-  push:
+  pull_request:
+    branches: [development]
+  merge_group:
     branches: [development]
 
 jobs:
