--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^16.1.0",
     "@types/quill": "^1.3.10",
     "@vercel/analytics": "^1.1.1",
+    "angular-calendar": "^0.31.0",
+    "date-fns": "^2.30.0",
     "dompurify": "2.2.9",
     "ngx-quill": "^22.1.0",
     "rxjs": "~7.8.0",
