--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@iplab/ngx-file-upload": "^16.0.2",
     "@types/quill": "^1.3.10",
     "@vercel/analytics": "^1.1.1",
     "angular-calendar": "^0.31.0",
