--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@types/quill": "^1.3.10",
     "@vercel/analytics": "^1.1.1",
     "angular-calendar": "^0.31.0",
+    "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "dompurify": "2.2.9",
     "ngx-quill": "^22.1.0",
