--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,10 @@
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "dompurify": "2.2.9",
+    "ng": "^0.0.0",
     "ngx-quill": "^22.1.0",
+    "npm": "^10.2.4",
+    "nvm": "^0.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
