--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,12 +25,14 @@
     "@stomp/rx-stomp": "^2.0.0",
     "@types/quill": "^1.3.10",
     "@vercel/analytics": "^1.1.1",
+    "@zoom/meetingsdk": "^3.1.2",
     "angular-calendar": "^0.31.0",
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "dompurify": "2.2.9",
     "ng": "^0.0.0",
     "ngx-quill": "^22.1.0",
+    "ngx-webrtc": "^0.2.4",
     "npm": "^10.2.4",
     "nvm": "^0.0.4",
     "rxjs": "~7.8.0",
