--- a/kaizen/requirements.txt
+++ b/kaizen/requirements.txt
@@ -1,9 +1,11 @@
 # Core dependencies
-Flask==2.3.3
 fastapi[all]
 textblob==0.15.3
 nltk==3.8.1
+pydantic
+lxml
+PyYAML
 
 # Machine learning and NLP
-torch==1.13.1
+torch
 transformers==4.27.0
