--- a/kaizen/Dockerfile
+++ b/kaizen/Dockerfile
@@ -5,13 +5,16 @@ FROM python:3.11.0
 WORKDIR /app
 
 # Copy the requirements file into the container at /app
-COPY ./requirements/requirements.txt /app/requirements.txt
+COPY ./requirements/requirements.txt /app/requirements/requirements.txt
 
 # Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements/requirements.txt
+
+# Copy the requirements file into the container at /app
+COPY ./setup/models_setup.py /app/setup/models_setup.py
 
 # Install huggingface model
-RUN python -c "from transformers import AutoModelForCausalLM, AutoTokenizer; model_name = 'TinyLlama/TinyLlama-1.1B-Chat-v1.0'; AutoTokenizer.from_pretrained(model_name); AutoModelForCausalLM.from_pretrained(model_name)"
+RUN python setup/models_setup.py
 
 # Install NLTK data
 RUN python -m nltk.downloader punkt stopwords
@@ -21,9 +24,6 @@ COPY . /app
 
 # Make port 8000 available to the world outside this container
 EXPOSE 8000
-
-# Define environment variable for FastAPI to run on 0.0.0.0
-ENV HOST=0.0.0.0
 
 # Command to run your application
 CMD ["python", "./src/main.py"]
