--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -16,11 +16,19 @@ server:
     max-keep-alive-requests: 4096
     keep-alive-timeout: 300s
     connection-timeout: 300s
+  undertow:
+    allow-encoded-slash: false
+    always-set-keep-alive: true
+    max-cookies: 200
+    max-headers: 12
+    max-parameters: 20
+    url-charset: UTF-8
 
 spring:
   main:
     allow-circular-references: true
     banner-mode: off
+    lazy-initialization: true
   jmx:
     enabled: false
 
@@ -50,26 +58,6 @@ spring:
         seconds: 300
     login_pass:
       enabled: false
-
-  #Email
-#  mail:
-#    default-encoding: UTF-8
-#    host: smtp-mail.outlook.com
-#    port: 587
-#    username: kaiteki.app@outlook.com
-#    password: daridzhanni_kaiteki2024
-#    protocol: smtp
-#    properties:
-#      mail:
-#        smtp:
-#          auth: true
-#          writetimeout: 10000
-#          connectiontimeout: 10000
-#          timeout: 10000
-#          starttls:
-#            enable: true
-#            required: true
-#    test-connection: true
 
   mail:
       default-encoding: UTF-8
