--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,10 +22,10 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@iplab/ngx-file-upload": "^16.0.2",
+    "@ng-matero/extensions": "^16.3.2",
     "@stomp/rx-stomp": "^2.0.0",
     "@types/quill": "^1.3.10",
     "@vercel/analytics": "^1.1.1",
-    "@zoom/meetingsdk": "^3.1.2",
     "angular-calendar": "^0.31.0",
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
@@ -38,6 +38,7 @@
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
+    "uninstall": "^0.0.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
