--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -21,6 +21,6 @@
 	],
 	"importOrderSeparation": true,
 	"importOrderSortSpecifiers": true,
-	"importOrderParserPlugins": ["typescript", "decorators"],
+	"importOrderParserPlugins": ["typescript", "decorators-legacy"],
 	"plugins": ["@trivago/prettier-plugin-sort-imports"]
 }
