--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
 		"angular-calendar": "^0.31.0",
 		"chart.js": "^4.4.0",
 		"date-fns": "^2.30.0",
+		"dayjs": "^1.11.10",
 		"dompurify": "2.2.9",
 		"ng": "^0.0.0",
 		"ngx-quill": "^22.1.0",
