--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	implementation 'org.flywaydb:flyway-core'
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
 	implementation 'org.springframework.session:spring-session-core'
+	implementation 'se.michaelthelin.spotify:spotify-web-api-java:8.0.0'
 
 	compileOnly 'org.projectlombok:lombok'
 
