bugfix: fixed ci-cd pipeline

--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -1,8 +1,8 @@
-name: Angular CI/CD
+name: Frontend CI/CD
 
 on:
   push:
-    branches: [main]
+    branches: [main, development]
   pull_request:
     branches: [main, development]
 
