feature: migrating to angular 17

--- a/frontend/tsconfig.spec.json
+++ b/frontend/tsconfig.spec.json
@@ -5,9 +5,5 @@
 		"outDir": "./out-tsc/spec",
 		"types": ["jasmine"]
 	},
-	"include": [
-		"src/**/*.spec.ts",
-		"src/**/*.d.ts",
-		"src/assets/styles/**/*.scss"
-	]
+	"include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
 }
