--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -5,20 +5,15 @@
 		"node": true
 	},
 	"ignorePatterns": ["projects/**/*"],
-	"parser": "@angular-eslint/template-parser",
 	"overrides": [
 		{
 			"files": ["*.ts"],
-			"parserOptions": {
-				"project": ["tsconfig.json"],
-				"createDefaultProgram": true
-			},
 			"extends": [
-				"plugin:prettier/recommended",
+				"eslint:recommended",
+				"plugin:@typescript-eslint/recommended",
 				"plugin:@angular-eslint/recommended",
 				"plugin:@angular-eslint/template/process-inline-templates",
-				"plugin:@typescript-eslint/recommended",
-				"eslint:recommended",
+				"plugin:prettier/recommended",
 				"prettier"
 			],
 			"rules": {
@@ -29,10 +24,6 @@
 						"prefix": "app",
 						"style": "camelCase"
 					}
-				],
-				"@typescript-eslint/explicit-member-accessibility": [
-					"off",
-					{ "accessibility": "explicit" }
 				],
 				"@angular-eslint/component-selector": [
 					"error",
@@ -52,19 +43,11 @@
 		},
 		{
 			"files": ["*.html"],
-			"extends": ["plugin:@angular-eslint/template/recommended"],
+			"extends": [
+				"plugin:@angular-eslint/template/recommended",
+				"plugin:@angular-eslint/template/accessibility"
+			],
 			"rules": {}
-		},
-		{
-			"files": ["*.component.html"],
-			"extends": ["plugin:@angular-eslint/template/recommended"],
-			"rules": {
-				"max-len": ["error", { "code": 200 }]
-			}
-		},
-		{
-			"files": ["*.component.ts"],
-			"extends": ["plugin:@angular-eslint/template/process-inline-templates"]
 		}
 	]
 }
