--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -8,7 +8,14 @@
 			"schematics": {
 				"@schematics/angular:component": {
 					"style": "scss",
+					"standalone": false,
 					"changeDetection": "OnPush"
+				},
+				"@schematics/angular:directive": {
+					"standalone": false
+				},
+				"@schematics/angular:pipe": {
+					"standalone": false
 				}
 			},
 			"root": "",
@@ -16,21 +23,24 @@
 			"prefix": "app",
 			"architect": {
 				"build": {
-					"builder": "@angular-devkit/build-angular:browser",
+					"builder": "@angular-devkit/build-angular:application",
 					"options": {
-						"outputPath": "dist",
+						"outputPath": "dist/kaiteki-frontend",
 						"index": "src/index.html",
-						"main": "src/main.ts",
+						"browser": "src/main.ts",
 						"polyfills": ["zone.js"],
 						"tsConfig": "tsconfig.app.json",
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.ico", "src/assets"],
+						"styles": ["src/styles.scss"],
 						"stylePreprocessorOptions": {
 							"includePaths": ["src/assets/styles"]
 						},
-						"styles": ["src/styles.scss"],
 						"scripts": [],
-						"allowedCommonJsDependencies": ["dayjs", "quill"]
+						"server": "src/main.server.ts",
+						"prerender": false,
+						"ssr": false,
+						"allowedCommonJsDependencies": ["dayjs", "quill", "quill-delta"]
 					},
 					"configurations": {
 						"production": {
@@ -38,7 +48,7 @@
 								{
 									"type": "initial",
 									"maximumWarning": "2mb",
-									"maximumError": "2mb"
+									"maximumError": "3mb"
 								},
 								{
 									"type": "anyComponentStyle",
@@ -55,12 +65,12 @@
 							"outputHashing": "all"
 						},
 						"development": {
-							"buildOptimizer": false,
 							"optimization": false,
-							"vendorChunk": true,
 							"extractLicenses": false,
 							"sourceMap": true,
-							"namedChunks": true
+							"namedChunks": true,
+							"ssr": false,
+							"prerender": false
 						}
 					},
 					"defaultConfiguration": "production"
@@ -68,15 +78,14 @@
 				"serve": {
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"options": {
-						"browserTarget": "kaiteki-frontend:build",
 						"proxyConfig": "src/proxy.conf.json"
 					},
 					"configurations": {
 						"production": {
-							"browserTarget": "kaiteki-frontend:build:production"
+							"buildTarget": "kaiteki-frontend:build:production"
 						},
 						"development": {
-							"browserTarget": "kaiteki-frontend:build:development"
+							"buildTarget": "kaiteki-frontend:build:development"
 						}
 					},
 					"defaultConfiguration": "development"
@@ -84,7 +93,7 @@
 				"extract-i18n": {
 					"builder": "@angular-devkit/build-angular:extract-i18n",
 					"options": {
-						"browserTarget": "kaiteki-frontend:build"
+						"buildTarget": "kaiteki-frontend:build"
 					}
 				},
 				"test": {
@@ -94,10 +103,10 @@
 						"tsConfig": "tsconfig.spec.json",
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": ["src/styles.scss"],
 						"stylePreprocessorOptions": {
 							"includePaths": ["src/assets/styles"]
 						},
+						"styles": ["src/styles.scss"],
 						"scripts": []
 					}
 				},
