--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,75 +8,70 @@
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test",
 		"test:prod": "ng test --browsers=ChromeHeadless --watch=false --code-coverage",
-		"prettier": "npx prettier --write .",
+		"serve:ssr:kaiteki-frontend": "node dist/kaiteki-frontend/server/server.mjs",
 		"lint": "ng lint",
-		"lint:fix": "ng lint --fix"
+		"lint:fix": "ng lint --fix",
+		"prettier": "npx prettier --write ."
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "^16.2.12",
-		"@angular/cdk": "^16.2.14",
-		"@angular/common": "^16.2.12",
-		"@angular/compiler": "^16.2.12",
-		"@angular/core": "^16.2.12",
-		"@angular/forms": "^16.2.12",
-		"@angular/material": "^16.2.14",
-		"@angular/platform-browser": "^16.2.12",
-		"@angular/platform-browser-dynamic": "^16.2.12",
-		"@angular/router": "^16.2.12",
-		"@iplab/ngx-file-upload": "^16.0.2",
-		"@ng-matero/extensions": "^16.3.2",
+		"@angular/animations": "^17.3.0",
+		"@angular/cdk": "^17.3.1",
+		"@angular/common": "^17.3.0",
+		"@angular/compiler": "^17.3.0",
+		"@angular/core": "^17.3.0",
+		"@angular/forms": "^17.3.0",
+		"@angular/material": "^17.3.1",
+		"@angular/platform-browser": "^17.3.0",
+		"@angular/platform-browser-dynamic": "^17.3.0",
+		"@angular/platform-server": "^17.3.0",
+		"@angular/router": "^17.3.0",
+		"@angular/ssr": "^17.3.1",
+		"@iplab/ngx-file-upload": "^17.1.0",
+		"@ng-matero/extensions": "^17.1.3",
 		"@stomp/rx-stomp": "^2.0.0",
-		"@types/quill": "^1.3.10",
-		"@vercel/analytics": "^1.1.1",
 		"angular-calendar": "^0.31.0",
-		"chart.js": "^4.4.0",
+		"chart.js": "^4.4.2",
 		"date-fns": "^3.6.0",
 		"dayjs": "^1.11.10",
-		"dompurify": "2.2.9",
-		"ng": "^0.0.0",
-		"ngx-quill": "^22.1.0",
-		"ngx-skeleton-loader": "^8.1.0",
-		"ngx-webrtc": "^0.2.4",
-		"npm": "^10.2.4",
-		"nvm": "^0.0.4",
+		"express": "^4.18.2",
+		"ng-matero": "^17.0.2",
+		"ngx-quill": "^25.1.1",
+		"ngx-skeleton-loader": "^9.0.0",
+		"quill": "^2.0.0-rc.0",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
-		"zone.js": "~0.13.0"
+		"zone.js": "~0.14.3"
 	},
 	"devDependencies": {
-		"@angular-builders/custom-webpack": "^16.0.0",
-		"@angular-devkit/build-angular": "^16.2.12",
-		"@angular-eslint/builder": "^16.3.1",
-		"@angular-eslint/eslint-plugin": "^16.3.1",
-		"@angular-eslint/eslint-plugin-template": "^16.3.1",
-		"@angular-eslint/schematics": "^16.3.1",
-		"@angular-eslint/template-parser": "^16.3.1",
-		"@angular/cli": "~16.2.12",
-		"@angular/compiler-cli": "^16.2.12",
-		"@ngtools/webpack": "^16.1.6",
+		"@angular-devkit/build-angular": "^17.3.1",
+		"@angular-eslint/builder": "17.3.0",
+		"@angular-eslint/eslint-plugin": "17.3.0",
+		"@angular-eslint/eslint-plugin-template": "17.3.0",
+		"@angular-eslint/schematics": "17.3.0",
+		"@angular-eslint/template-parser": "17.3.0",
+		"@angular/cli": "^17.3.1",
+		"@angular/compiler-cli": "^17.3.0",
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
-		"@types/dompurify": "2.2.3",
-		"@types/jasmine": "~4.3.0",
+		"@types/express": "^4.17.17",
+		"@types/jasmine": "~5.1.0",
+		"@types/node": "^18.18.0",
+		"@types/quill": "^2.0.14",
 		"@types/sockjs-client": "^1.5.4",
-		"@typescript-eslint/eslint-plugin": "^5.62.0",
-		"@typescript-eslint/parser": "^5.62.0",
-		"compression-webpack-plugin": "^10.0.0",
+		"@typescript-eslint/eslint-plugin": "7.2.0",
+		"@typescript-eslint/parser": "7.2.0",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-html": "^8.0.0",
 		"eslint-plugin-prettier": "^5.1.3",
-		"jasmine-core": "~4.6.0",
+		"jasmine-core": "~5.1.0",
 		"karma": "~6.4.0",
 		"karma-chrome-launcher": "~3.2.0",
 		"karma-coverage": "~2.2.0",
 		"karma-jasmine": "~5.1.0",
 		"karma-jasmine-html-reporter": "~2.1.0",
+		"parse5": "^7.1.2",
 		"prettier": "^3.2.5",
 		"prettier-eslint": "^16.3.0",
-		"typescript": "~5.1.3",
-		"webpack": "^5.88.2",
-		"webpack-bundle-analyzer": "^4.9.0",
-		"webpack-cli": "^5.1.4"
+		"typescript": "~5.4.2"
 	}
 }
