--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -3,8 +3,8 @@
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
 		"outDir": "./out-tsc/app",
-		"types": []
+		"types": ["node"]
 	},
-	"files": ["src/main.ts"],
+	"files": ["src/main.ts", "src/main.server.ts", "server.ts"],
 	"include": ["src/**/*.d.ts"]
 }
