feature: migrate to angular 17 syntax

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -2,7 +2,7 @@
 {
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
-		"outDir": "./out-tsc/app",
+		"outDir": "./dist/out-tsc/app",
 		"types": ["node"]
 	},
 	"files": ["src/main.ts", "src/main.server.ts", "server.ts"],
