--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -26,6 +26,7 @@
 					"builder": "@angular-devkit/build-angular:application",
 					"options": {
 						"outputPath": "dist/kaiteki-frontend",
+						"preserveSymlinks": true,
 						"index": "src/index.html",
 						"browser": "src/main.ts",
 						"polyfills": ["zone.js"],
@@ -40,7 +41,11 @@
 						"server": "src/main.server.ts",
 						"prerender": false,
 						"ssr": false,
-						"allowedCommonJsDependencies": ["dayjs", "quill", "quill-delta"]
+						"allowedCommonJsDependencies": ["dayjs", "quill", "quill-delta"],
+						"extractLicenses": false,
+						"sourceMap": true,
+						"optimization": false,
+						"namedChunks": true
 					},
 					"configurations": {
 						"production": {
@@ -56,13 +61,17 @@
 									"maximumError": "8kb"
 								}
 							],
+							"optimization": true,
+							"outputHashing": "all",
+							"sourceMap": false,
+							"namedChunks": false,
+							"extractLicenses": true,
 							"fileReplacements": [
 								{
 									"replace": "src/environments/environment.ts",
 									"with": "src/environments/environment.prod.ts"
 								}
-							],
-							"outputHashing": "all"
+							]
 						},
 						"development": {
 							"optimization": false,
