--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,18 @@
 {
 	"name": "kaiteki-frontend",
-	"version": "0.0.0",
+	"version": "0.0.1",
+	"private": true,
+	"description": "Kaiteki - a web platform for modern productivity approach",
+	"license": "MIT",
+	"engines": {
+		"node": "^18.13.0 || ^20.9.0",
+		"yarn": ">=1.22.4 <2",
+		"npm": "Please use yarn instead of NPM to install dependencies"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/DiarCode/kaiteki.git"
+	},
 	"scripts": {
 		"ng": "ng",
 		"start": "ng serve",
@@ -13,7 +25,6 @@
 		"lint:fix": "ng lint --fix",
 		"prettier": "npx prettier --write ."
 	},
-	"private": true,
 	"dependencies": {
 		"@angular/animations": "^17.3.0",
 		"@angular/cdk": "^17.3.1",
@@ -30,6 +41,7 @@
 		"@iplab/ngx-file-upload": "^17.1.0",
 		"@ng-matero/extensions": "^17.1.3",
 		"@stomp/rx-stomp": "^2.0.0",
+		"@stomp/stompjs": "^7.0.0",
 		"angular-calendar": "^0.31.0",
 		"chart.js": "^4.4.2",
 		"date-fns": "^3.6.0",
@@ -41,6 +53,7 @@
 		"quill": "^2.0.0-rc.0",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
+		"uuid": "^9.0.1",
 		"zone.js": "~0.14.3"
 	},
 	"devDependencies": {
