feature: team settings

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
 	},
 	"scripts": {
 		"ng": "ng",
+		"ci": "yarn install --frozen-lockfile",
 		"start": "ng serve",
 		"build": "ng build",
 		"watch": "ng build --watch --configuration development",
