--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -34,10 +34,7 @@
 					}
 				],
 				"@angular-eslint/use-lifecycle-interface": "error",
-				"@typescript-eslint/explicit-function-returns": [
-					"off",
-					{ "allowExpressions": true }
-				],
+				"@typescript-eslint/explicit-function-returns": ["off", { "allowExpressions": true }],
 				"@typescript-eslint/no-unused-vars": "error"
 			}
 		},
