--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
 		"dayjs": "^1.11.10",
 		"express": "^4.18.2",
 		"ng-matero": "^17.0.2",
+		"ng2-charts": "^6.0.0",
 		"ngx-quill": "^25.1.1",
 		"ngx-skeleton-loader": "^9.0.0",
 		"quill": "^2.0.0-rc.0",
