Feature/signup-slider (#52)
* added image slider in login page

* redesigned signup page using image slider

* fixed the skeleton loaders

---------

Co-authored-by: Moonapso <100219166+Moonapso@users.noreply.github.com>

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -17,6 +17,8 @@
 				"prettier"
 			],
 			"rules": {
+				"@angular-eslint/template/click-events-have-key-events": ["off"],
+
 				"@angular-eslint/directive-selector": [
 					"error",
 					{
