--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,7 +54,8 @@
 		"ngx-quill": "^25.1.1",
 		"ngx-skeleton-loader": "^9.0.0",
 		"quill": "^2.0.0-rc.0",
-		"rxjs": "~7.8.0",
+		"rxjs": "^7.8.1",
+		"socket.io-client": "^4.7.5",
 		"tslib": "^2.3.0",
 		"uuid": "^9.0.1",
 		"zone.js": "~0.14.3"
@@ -73,7 +74,6 @@
 		"@types/jasmine": "~5.1.0",
 		"@types/node": "^18.18.0",
 		"@types/quill": "^2.0.14",
-		"@types/sockjs-client": "^1.5.4",
 		"@typescript-eslint/eslint-plugin": "7.2.0",
 		"@typescript-eslint/parser": "7.2.0",
 		"eslint": "^8.57.0",
