feat: configuration changes

--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -6,8 +6,10 @@
 	"bracketSpacing": true,
 	"singleQuote": true,
 	"jsxSingleQuote": true,
+	"quoteProps": "preserve",
 	"arrowParens": "avoid",
 	"singleAttributePerLine": true,
+	"embeddedLanguageFormatting": "off",
 	"endOfLine": "auto",
 	"printWidth": 100,
 	"importOrder": [
