--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -9,7 +9,8 @@
 				"@schematics/angular:component": {
 					"style": "scss",
 					"standalone": false,
-					"changeDetection": "OnPush"
+					"changeDetection": "OnPush",
+					"skipTests": true
 				},
 				"@schematics/angular:directive": {
 					"standalone": false
@@ -65,6 +66,7 @@
 							"outputHashing": "all",
 							"sourceMap": false,
 							"namedChunks": false,
+							"aot": true,
 							"extractLicenses": true,
 							"fileReplacements": [
 								{
@@ -129,6 +131,11 @@
 		}
 	},
 	"cli": {
+		"packageManager": "yarn",
+		"cache": {
+			"enabled": true,
+			"environment": "all"
+		},
 		"schematicCollections": ["@angular-eslint/schematics"]
 	}
 }
