--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -29,6 +29,9 @@
 		"experimentalDecorators": true,
 		"moduleResolution": "node",
 		"importHelpers": true,
+		"jsx": "react",
+		"jsxFactory": "h",
+		"jsxFragmentFactory": "Fragment",
 		"target": "ES2022",
 		"module": "ES2022",
 		"useDefineForClassFields": false,
