--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -27,3 +27,5 @@ SERVER_URL = "string"
 SPOTIFY_CLIENT_ID = "string"
 SPOTIFY_CLIENT_SECRET = "string"
 SPOTIFY_REDIRECT_URL = "string"
+
+TELEGRAM_BOT_URL = "string"
