added global loader (#55)
* added global loader

* added global loader

* edited gitignore

* edited

* edited

---------

Co-authored-by: Moonapso <100219166+Moonapso@users.noreply.github.com>

--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,29 +1,30 @@
 {
-	"trailingComma": "all",
-	"tabWidth": 2,
-	"useTabs": true,
-	"semi": false,
-	"bracketSpacing": true,
-	"singleQuote": true,
-	"jsxSingleQuote": true,
-	"quoteProps": "preserve",
-	"arrowParens": "avoid",
-	"singleAttributePerLine": true,
-	"embeddedLanguageFormatting": "off",
-	"endOfLine": "auto",
-	"printWidth": 100,
-	"importOrder": [
-		"@angular/(.*)",
-		"^rxjs/(.*)$",
-		"<THIRD_PARTY_MODULES>",
-		"^src/app/core/(.*)$",
-		"^src/app/shared/(.*)$",
-		"^src/app/(.*)$",
-		"^../(.*)",
-		"^./(.*)"
-	],
-	"importOrderSeparation": true,
-	"importOrderSortSpecifiers": true,
-	"importOrderParserPlugins": ["typescript", "decorators-legacy"],
-	"plugins": ["@trivago/prettier-plugin-sort-imports"]
+  'trailingComma': 'all',
+  'tabWidth': 2,
+  'useTabs': true,
+  'semi': false,
+  'bracketSpacing': true,
+  'singleQuote': true,
+  'jsxSingleQuote': true,
+  'quoteProps': 'preserve',
+  'arrowParens': 'avoid',
+  'singleAttributePerLine': true,
+  'embeddedLanguageFormatting': 'off',
+  'endOfLine': 'auto',
+  'printWidth': 100,
+  'importOrder':
+    [
+      '@angular/(.*)',
+      '^rxjs/(.*)$',
+      '<THIRD_PARTY_MODULES>',
+      '^src/app/core/(.*)$',
+      '^src/app/shared/(.*)$',
+      '^src/app/(.*)$',
+      '^../(.*)',
+      '^./(.*)',
+    ],
+  'importOrderSeparation': true,
+  'importOrderSortSpecifiers': true,
+  'importOrderParserPlugins': ['typescript', 'decorators-legacy'],
+  'plugins': ['@trivago/prettier-plugin-sort-imports'],
 }
