--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,8 +49,10 @@
 		"date-fns": "^3.6.0",
 		"dayjs": "^1.11.10",
 		"express": "^4.18.2",
+		"lottie-web": "^5.12.2",
 		"ng-matero": "^17.0.2",
 		"ng2-charts": "^6.0.0",
+		"ngx-lottie": "^11.0.2",
 		"ngx-quill": "^25.1.1",
 		"ngx-skeleton-loader": "^9.0.0",
 		"quill": "^2.0.0-rc.0",
