feat: changed vercel config

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,3 +1,11 @@
 {
-	"rewrites": [{ "source": "/(.*)", "destination": "/" }]
+	"version": "2",
+	"public": true,
+	"name": "Kaiteki",
+	"rewrites": [{ "source": "/(.*)", "destination": "/api" }],
+	"functions": {
+		"api/index.js": {
+			"includeFiles": "dist/kaiteki-frontend/browser/**"
+		}
+	}
 }
