--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,5 @@
 {
-	"version": "2",
+	"version": 2,
 	"public": true,
 	"name": "Kaiteki",
 	"rewrites": [{ "source": "/(.*)", "destination": "/api" }],
