--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -38,6 +38,10 @@ dependencies {
 	implementation 'se.michaelthelin.spotify:spotify-web-api-java:8.0.0'
 	implementation 'me.paulschwarz:spring-dotenv:4.0.0'
 
+	implementation 'org.apache.poi:poi:5.2.5'
+	implementation 'org.apache.poi:poi-ooxml:5.2.5'
+
+
 	compileOnly 'org.projectlombok:lombok'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
