feat: remove omit dev props in yarn build

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,7 +6,7 @@ COPY package*.json ./
 RUN yarn install
 
 COPY . .
-RUN yarn run build --omit=dev
+RUN yarn run build
 
 # Stage 2: Serve the angular app with Nginx
 FROM nginx:alpine
